update on lisence and sensitive info 2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<footer>
-		<p>© 2024, IN4MATX 133 (FALL24 | Group 8: Jixuan Luo, Ron Luo)</p>
+		<p>© 2024, FALL24 | Lorrainn && Ronn</p>
 	</footer>
 
 	<script src="buttons.js"></script>
